# RuneDB

./: Cargo.toml  README.md  howto.txt
Databases/: hello.rdb  new.rdb  sriya.rdb
src/: main.rs
src/execution/: mod.rs
src/parser/: mod.rs  syntax.pest
src/structures/: mod.rs
