[package]
name = "RuneDB"
version = "0.1.2"
edition = "2024"
description = "A lightweight database built in Rust"
license = "MIT"
repository = "https://github.com/SriyaNan/RuneDB"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
pest = "2.7"
pest_derive = "2.7"
lazy_static = "1.4"
